# spai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESING.md  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: GITHUB_PAGES_SETUP.md  LOCAL_JEKYLL_SETUP.md  SECRETS_SETUP.md
.github/workflows/: deploy-pages.yml  generate.yml
config/: base.yaml  local.yaml
docs/: A2-adjustment-strategy.md  A2-guidelines.md
example-code/: Dockerfile  FILE_INVENTORY.md  Makefile  README.md  alerts.py  autospanishblog-system-design.md  base.yaml  config.py  content_fetcher.py  content_generator.py  docker-compose.yml  local.yaml  logger.py  main.py  metrics.py  production.yaml  publisher.py  quality_gate.py  requirements.txt  sources-example.yaml  topic_discovery.py
output/: _config.yml  index.html
output/_layouts/: post.html
output/_pages/: about.md  contact.md  levels.md  privacy.md
output/_posts/: 2025-11-01-bienvenidos-a-autospanishblog.md  2025-11-12-152821-eventos-astronomicos-y-economia-en-espana-a2.md  2025-11-12-152900-espana-y-sus-relaciones-internacionales-a2.md  (+124 more)
output/assets/css/: custom.css
scripts/: article_synthesizer.py  config.py  content_fetcher.py  content_generator.py  diagnose_sources.py  level_adapter.py  logger.py  main.py  models.py  prompts.py  publisher.py  quality_gate.py  test_discovery.py  test_fetcher.py  test_generator.py  topic_discovery.py
tests/: __init__.py  conftest.py  test_article_synthesizer.py  test_content_generator.py  test_integration_two_step.py  test_level_adapter.py  test_prompts.py
(+1 files in other folders)
